--- a/.github/workflows/dev-next.yml
+++ b/.github/workflows/dev-next.yml
@@ -236,11 +236,11 @@ jobs:
       - name: Rename
         if: ${{ contains(matrix.name, 'linux') || contains(matrix.name, 'bsd') || contains(matrix.name, 'darwin') || contains(matrix.name, 'android') }}
         run: mv sing-box* sing-box-${{ matrix.name }}
-      #- name: Upload artifact
-      #  uses: actions/upload-artifact@v3
-      #  with:
-      #    name: sing-box-${{ matrix.name }}
-      #    path: sing-box*
+      - name: Upload artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: sing-box-${{ matrix.name }}
+          path: sing-box*
       - name: Release
         uses: softprops/action-gh-release@v1
         with:
