--- a/.github/workflows/dev-next-win.yml
+++ b/.github/workflows/dev-next-win.yml
@@ -1,4 +1,4 @@
-name: build sing-box with reality
+name: build sing-box with reality for windows
 
 on:
   workflow_dispatch:
@@ -88,16 +88,6 @@ jobs:
             goos: windows
             goarch: amd64
             goamd64: v3
-          
-          # linux
-          - name: linux-amd64
-            goos: linux
-            goarch: amd64
-            goamd64: v1
-          - name: linux-amd64-v3
-            goos: linux
-            goarch: amd64
-            goamd64: v3
          
           
    
@@ -110,8 +100,8 @@ jobs:
       GOAMD64: ${{ matrix.goamd64 }}
       GOARM: ${{ matrix.goarm }}
       GOMIPS: ${{ matrix.gomips }}
-      CGO_ENABLED: 0
-      TAGS: with_gvisor,with_quic,with_wireguard,with_clash_api,with_acme
+      CGO_ENABLED: 1
+      TAGS: with_gvisor,with_quic,with_wireguard,with_clash_api,with_utls,with_reality_server
     steps:
       - name: Set variables
         run: |
