--- a/.github/workflows/dev-next-linux.yml
+++ b/.github/workflows/dev-next-linux.yml
@@ -87,7 +87,7 @@ jobs:
           repository: SagerNet/sing-box
           ref: dev-next
       - name: Setup Go
-        uses: actions/setup-go@v3
+        uses: actions/setup-go@v4
         with:
           go-version: '1.20'
       - name: Build
@@ -108,10 +108,10 @@ jobs:
         with:
           name: sing-box-${{ matrix.name }}
           path: sing-box*
-      - name: Release
-        uses: softprops/action-gh-release@v0.1.5
-        with:
-          tag_name: ${{ env.TAG_NAME }}
-          name: ${{ env.RELEASE_NAME }}
-          files: |  
-            sing-box*
+ #     - name: Release
+ #       uses: softprops/action-gh-release@v0.1.5
+ #       with:
+#          tag_name: ${{ env.TAG_NAME }}
+ #         name: ${{ env.RELEASE_NAME }}
+#          files: |  
+ #           sing-box*
