--- a/.github/workflows/dev-next-mac.yml
+++ b/.github/workflows/dev-next-mac.yml
@@ -29,7 +29,7 @@ jobs:
         with:
           fetch-depth: 0
           repository: SagerNet/sing-box
-          ref: dev-next
+          ref: main-next
       - name: Setup Go
         uses: actions/setup-go@v4
         with:
@@ -43,7 +43,7 @@ jobs:
         with:
           fetch-depth: 0
           repository: SagerNet/sing-box
-          ref: dev-next
+          ref: maim-next
       - name: Setup Go
         uses: actions/setup-go@v4
         with:
@@ -80,7 +80,7 @@ jobs:
         with:
           fetch-depth: 0
           repository: SagerNet/sing-box
-          ref: dev-next
+          ref: main-next
       - name: Setup Go
         uses: actions/setup-go@v4
         with:
