--- a/.github/workflows/dev-next-win.yml
+++ b/.github/workflows/dev-next-win.yml
@@ -29,11 +29,11 @@ jobs:
         with:
           fetch-depth: 0
           repository: SagerNet/sing-box
-          ref: dev-next
+          ref: main-next
       - name: Setup Go
         uses: actions/setup-go@v4
         with:
-          go-version: 1.20.2
+          go-version: 1.20.3
   build_go120:
     name: Debug build (Go 1.20)
     runs-on: ubuntu-latest
@@ -43,11 +43,11 @@ jobs:
         with:
           fetch-depth: 0
           repository: SagerNet/sing-box
-          ref: dev-next
+          ref: main-next
       - name: Setup Go
         uses: actions/setup-go@v4
         with:
-          go-version: 1.20.2
+          go-version: 1.20.3
   cross:
     strategy:
       matrix:
@@ -81,11 +81,11 @@ jobs:
         with:
           fetch-depth: 0
           repository: SagerNet/sing-box
-          ref: dev-next
+          ref: main-next
       - name: Setup Go
         uses: actions/setup-go@v4
         with:
-          go-version: 1.20.2
+          go-version: 1.20.3
       - name: Build
         id: build
         run: make
