--- a/.github/workflows/dev-next-mac.yml
+++ b/.github/workflows/dev-next-mac.yml
@@ -43,11 +43,11 @@ jobs:
         with:
           fetch-depth: 0
           repository: SagerNet/sing-box
-          ref: maim-next
+          ref: main-next
       - name: Setup Go
         uses: actions/setup-go@v4
         with:
-          go-version: 1.20.2
+          go-version: 1.20.3
   cross:
     strategy:
       matrix:
