--- a/.github/workflows/dev-next-mac.yml
+++ b/.github/workflows/dev-next-mac.yml
@@ -69,7 +69,7 @@ jobs:
       GOARM: ${{ matrix.goarm }}
       GOMIPS: ${{ matrix.gomips }}
       CGO_ENABLED: 1
-      TAGS: osusergo,netgo,with_grpc,with_gvisor,with_quic,with_wireguard,with_clash_api,with_utls,with_reality_server
+      TAGS: osusergo,netgo,with_gvisor,with_quic,with_wireguard,with_clash_api,with_utls,with_reality_server
     steps:
       - name: Set variables
         run: |
