--- a/.github/workflows/dev-next-linux.yml
+++ b/.github/workflows/dev-next-linux.yml
@@ -84,8 +84,8 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
-          repository: SagerNet/sing-box
-          ref: dev-next
+          repository: CHIZI-0618/sing-box
+          ref: dev-next-yaott
       - name: Setup Go
         uses: actions/setup-go@v4
         with:
