--- a/.github/workflows/dev-next-mac.yml
+++ b/.github/workflows/dev-next-mac.yml
@@ -1,4 +1,4 @@
-name: build sing-box with reality for MacOS
+name: build sing-box-yaott for MacOS
 
 on:
   workflow_dispatch:
@@ -28,8 +28,8 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
-          repository: SagerNet/sing-box
-          ref: dev-next
+          repository: CHIZI-0618/sing-box
+          ref: dev-next-yaott
       - name: Setup Go
         uses: actions/setup-go@v4
         with:
@@ -42,8 +42,8 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
-          repository: SagerNet/sing-box
-          ref: dev-next
+          repository: CHIZI-0618/sing-box
+          ref: dev-next-yaott
       - name: Setup Go
         uses: actions/setup-go@v4
         with:
@@ -69,7 +69,7 @@ jobs:
       GOARM: ${{ matrix.goarm }}
       GOMIPS: ${{ matrix.gomips }}
       CGO_ENABLED: 1
-      TAGS: osusergo,netgo,with_gvisor,with_quic,with_wireguard,with_clash_api,with_utls,with_reality_server
+      TAGS: osusergo,netgo,with_gvisor,with_quic,with_clash_api,with_ech,with_utls,with_proxyprovider
     steps:
       - name: Set variables
         run: |
@@ -79,8 +79,8 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
-          repository: SagerNet/sing-box
-          ref: dev-next
+          repository: CHIZI-0618/sing-box
+          ref: dev-next-yaott
       - name: Setup Go
         uses: actions/setup-go@v4
         with:
