--- a/.github/workflows/dev-next-win.yml
+++ b/.github/workflows/dev-next-win.yml
@@ -28,8 +28,8 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
-          repository: SagerNet/sing-box
-          ref: dev-next
+          repository: CHIZI-0618/sing-box
+          ref: dev-next-yaott
       - name: Setup Go
         uses: actions/setup-go@v4
         with:
@@ -42,8 +42,8 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
-          repository: SagerNet/sing-box
-          ref: dev-next
+          repository: CHIZI-0618/sing-box
+          ref: dev-next-yaott
       - name: Setup Go
         uses: actions/setup-go@v4
         with:
@@ -70,7 +70,7 @@ jobs:
       GOARM: ${{ matrix.goarm }}
       GOMIPS: ${{ matrix.gomips }}
       CGO_ENABLED: 1
-      TAGS: with_gvisor,with_quic,with_wireguard,with_clash_api,with_utls
+      TAGS: with_gvisor,with_quic,with_clash_api,with_ech,with_utls,with_proxyprovider
     steps:
       - name: Set variables
         run: |
@@ -80,8 +80,8 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
-          repository: SagerNet/sing-box
-          ref: dev-next
+          repository: CHIZI-0618/sing-box
+          ref: dev-next-yaott
       - name: Setup Go
         uses: actions/setup-go@v4
         with:
