--- a/.github/workflows/SFA-qjebbs.yml
+++ b/.github/workflows/SFA-qjebbs.yml
@@ -32,6 +32,7 @@ jobs:
         with:
           repository: SagerNet/sing-box-for-android
           path: SFA
+          ref: main/1c8cc6b3cf338075a3059b7e1f676790cf77f202
           submodules: recursive
 
       - name: Setup Java
@@ -42,7 +43,7 @@ jobs:
 
       - name: Build SFA
         env:
-          version: 1.4.0
+          version: 1.4.1
         run: |
           mkdir -p SFA/app/libs/
           make lib_install
