--- a/.github/workflows/sfa_outbound_providers.yml
+++ b/.github/workflows/sfa_outbound_providers.yml
@@ -41,10 +41,12 @@ jobs:
           java-version: 20
 
       - name: Build SFA
+        env:
+         version: 1.5.0-beta.11
         run: |
           mkdir -p SFA/app/libs/
           make lib_install
-          version=$(CGO_ENABLED=0 go run ./cmd/internal/read_tag)
+          #version=$(CGO_ENABLED=0 go run ./cmd/internal/read_tag)
           CGO_ENABLED=1 gomobile bind -v -androidapi 21 -javapkg=io.nekohasekai -libname=box -tags ${TAGS} -ldflags "-X github.com/sagernet/sing-box/constant.Version=${version} -buildid=" ./experimental/libbox
           cp ./libbox.aar SFA/app/libs/
           cd SFA
