--- a/.github/workflows/core.yml
+++ b/.github/workflows/core.yml
@@ -15,7 +15,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          repository: yaotthaha/sing-box-pub
+          repository: CHIZI-0618/sing-box
           ref: dev-next-yaott
 
       - name: Get latest go version
