--- a/.github/workflows/core.yml
+++ b/.github/workflows/core.yml
@@ -15,8 +15,8 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          repository: CHIZI-0618/sing-box
-          ref: dev-next-yaott
+          repository: yaotthaha/sing-box-pub
+          ref: dev-yaott
 
       - name: Get latest go version
         id: go_version
