--- a/.github/workflows/dev-next-win.yml
+++ b/.github/workflows/dev-next-win.yml
@@ -23,7 +23,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
-          repository: CHIZI-0618/sing-box
+          repository: debiansid/sing-box
           ref: dev-yaott
       - name: Setup Go
         uses: actions/setup-go@v4
