--- a/.github/workflows/dev-next-win.yml
+++ b/.github/workflows/dev-next-win.yml
@@ -37,8 +37,8 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
-          repository: CHIZI-0618/sing-box
-          ref: dev-next-yaott
+          repository: debiansid/sing-box
+          ref: dev-yaott
       - name: Setup Go
         uses: actions/setup-go@v4
         with:
@@ -65,7 +65,7 @@ jobs:
       GOARM: ${{ matrix.goarm }}
       GOMIPS: ${{ matrix.gomips }}
       CGO_ENABLED: 1
-      TAGS: with_gvisor,with_quic,with_clash_api,with_utls,with_proxyprovider,with_ruleprovider
+      TAGS: with_gvisor,with_quic,with_clash_api,with_utls,with_proxyprovider
     steps:
       - name: Set variables
         run: |
@@ -75,8 +75,8 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
-          repository: CHIZI-0618/sing-box
-          ref: dev-next-yaott
+          repository: debiansid/sing-box
+          ref: dev-yaott
       - name: Setup Go
         uses: actions/setup-go@v4
         with:
