--- a/.github/workflows/sfa-e5.yml
+++ b/.github/workflows/sfa-e5.yml
@@ -50,6 +50,7 @@ jobs:
           cd SFA
           echo "VERSION_NAME=${version}" > local.properties
           echo "VERSION_CODE=$(date +%Y%m%d%H)" >> local.properties
+          echo "android.enableR8.fullMode=true" >> local.properties
           sed -i '/signingConfigs\.release/d' app/build.gradle
           chmod +x ./gradlew
           ./gradlew assembleRelease
