--- a/.github/workflows/sfa-e5.yml
+++ b/.github/workflows/sfa-e5.yml
@@ -7,7 +7,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     env:
-      TAGS: with_gvisor,with_quic,with_utls,with_clash_api,with_proxyprovider,with_ruleprovider
+      TAGS: with_gvisor,with_quic,with_utls,with_clash_api,with_proxyprovider
 
     steps:
       - name: Checkout core Repository
