--- a/.github/workflows/sfa_outbound_providers.yml
+++ b/.github/workflows/sfa_outbound_providers.yml
@@ -1,4 +1,4 @@
-name: Build SFA with outbound_providers core
+name: Build SFA with outbound_providers core from PuerNya
 
 on:
   workflow_dispatch:
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v4
         with:
          repository: PuerNya/sing-box
-         ref: outbound-providers
+         ref: building
          fetch-depth: 0
 
       - name: Get latest go version
