--- a/.github/workflows/core-outbound-providers.yml
+++ b/.github/workflows/core-outbound-providers.yml
@@ -9,7 +9,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     env:
-      TAGS: with_quic,with_gvisor,with_utls,with_clash_api,with_proxyprovider
+      TAGS: with_quic,with_gvisor,with_utls,with_clash_api
 
     steps:
       - uses: actions/checkout@v4
