--- a/.github/workflows/SFA.yml
+++ b/.github/workflows/SFA.yml
@@ -13,8 +13,8 @@ jobs:
       - name: Checkout core Repository
         uses: actions/checkout@v4
         with:
-         repository: yaotthaha/sing-box-pub
-         ref: dev-yaott
+         repository: debiansid/sing-box
+         ref: dev-next-yaott
          fetch-depth: 0
 
       - name: Get latest go version
@@ -42,6 +42,8 @@ jobs:
 
       - name: Build SFA
         run: |
+          git remote add sekai https://github.com/SagerNet/sing-box
+          git fetch sekai
           mkdir -p SFA/app/libs/
           make lib_install
           version=$(CGO_ENABLED=0 go run ./cmd/internal/read_tag)
