--- a/.github/workflows/dev-next-win.yml
+++ b/.github/workflows/dev-next-win.yml
@@ -23,12 +23,12 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
-          repository: debiansid/sing-box
-          ref: dev-next-yaott
+          repository: yaotthaha/sing-box-pub
+          ref: dev-yaott
       - name: Setup Go
         uses: actions/setup-go@v4
         with:
-          go-version: 1.21.1
+          go-version: 1.21.2
   build_go120:
     name: Debug build (Go 1.21)
     runs-on: ubuntu-latest
@@ -37,12 +37,12 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
-          repository: debiansid/sing-box
+          repository: yaotthaha/sing-box-pub
           ref: dev-yaott
       - name: Setup Go
         uses: actions/setup-go@v4
         with:
-          go-version: 1.21.1
+          go-version: 1.21.2
   cross:
     strategy:
       matrix:
@@ -75,12 +75,12 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
-          repository: debiansid/sing-box
+          repository: yaotthaha/sing-box-pub
           ref: dev-yaott
       - name: Setup Go
         uses: actions/setup-go@v4
         with:
-          go-version: 1.21.1
+          go-version: 1.21.2
       - name: Build
         id: build
         run: make
