--- a/.github/workflows/core-yaott.yml
+++ b/.github/workflows/core-yaott.yml
@@ -1,4 +1,4 @@
-name: Build Core from E5 repo
+name: Build Core from yaott repo
 
 on:
   workflow_dispatch:
@@ -15,8 +15,8 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          repository: CHIZI-0618/sing-box
-          ref: dev-next-yaott
+          repository: yaotthaha/sing-box-pub
+          ref: dev-yaott
 
       - name: Get latest go version
         id: go_version
@@ -26,7 +26,7 @@ jobs:
       - name: Setup Go
         uses: actions/setup-go@v4
         with:
-          go-version: '1.21.1'
+          go-version: '1.21.2'
 
       - name: Setup NDK
         uses: nttld/setup-ndk@v1
