--- a/.github/workflows/linux-client.yml
+++ b/.github/workflows/linux-client.yml
@@ -23,12 +23,12 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
-          repository: CHIZI-0618/sing-box
-          ref: dev-next-yaott
+          repository: yaotthaha/sing-box-pub
+          ref: dev-yaott
       - name: Setup Go
         uses: actions/setup-go@v4
         with:
-          go-version: '1.21.1'
+          go-version: '1.21.2'
   build_go120:
     name: Debug build (Go 1.21)
     runs-on: ubuntu-latest
@@ -37,12 +37,12 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
-          repository: CHIZI-0618/sing-box
-          ref: dev-next-yaott
+          repository: yaotthaha/sing-box-pub
+          ref: dev-yaott
       - name: Setup Go
         uses: actions/setup-go@v4
         with:
-          go-version: 1.21.1
+          go-version: 1.21.2
   cross:
     strategy:
       matrix:
@@ -78,8 +78,8 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
-          repository: CHIZI-0618/sing-box
-          ref: dev-next-yaott
+          repository: yaotthaha/sing-box-pub
+          ref: dev-yaott
       - name: Setup Go
         uses: actions/setup-go@v4
         with:
