--- a/.github/workflows/sfa_outbound_providers.yml
+++ b/.github/workflows/sfa_outbound_providers.yml
@@ -54,51 +54,35 @@ jobs:
           sed -i '/signingConfigs\.release/d' app/build.gradle
           chmod +x ./gradlew
           ./gradlew assembleRelease
+          
+        - name: Sign SFA
+           uses: r0adkll/sign-android-release@v1
+           id: sign_app
+           with:
+             releaseDirectory: SFA/build/outputs/apk/release
+             signingKeyBase64: ${{ secrets.SIGNING_KEY }}
+             alias: ${{ secrets.ALIAS }}
+             keyStorePassword: ${{ secrets.KEY_STORE_PASSWORD }}
+             keyPassword: ${{ secrets.KEY_PASSWORD }}
+
+        - uses: jungwinter/split@v1
+         id: signed_files
+          with:
+          msg: ${{ steps.sign_app.signedReleaseFiles }}
+          separator: ':'
+
+        - name: SFA Release
+          uses: "marvinpinto/action-automatic-releases@latest"
+          with:
+          repo_token: "${{ secrets.GITHUB_TOKEN }}"
+          automatic_release_tag: "latest"
+          prerelease: true
+          title: "Release X"
+          files: |
+          ${{ steps.signed_files._0 }}
+          ${{ steps.signed_files._1 }}
+          ${{ steps.signed_files._2 }}
+          ${{ steps.signed_files._3 }}
+          ${{ steps.signed_files._4 }}
       
-      - name: Sign SFA
-        uses: PuerNya/sign-android-release@v2
-        with:
-          releaseDirectory: SFA/app/build/outputs/apk/release
-          signingKeyBase64: ${{ secrets.SIGN_KEY }}
-          alias: ${{ secrets.ALIAS }}
-          keyStorePassword: ${{ secrets.KEY_STORE_PASSWORD }}
-
-      - name: Upload arm64-v8a artifact
-        uses: actions/upload-artifact@v3
-        with:
-          name: SFA-arm64-v8a
-          path: |
-            SFA/app/build/outputs/apk/release/*-arm64-v8a-signed.apk
-            SFA/app/build/outputs/apk/release/*-arm64-v8a-*-signed.apk
-
-      - name: Upload armeabi-v7a artifact
-        uses: actions/upload-artifact@v3
-        with:
-          name: SFA-armeabi-v7a
-          path: |
-            SFA/app/build/outputs/apk/release/*-armeabi-v7a-signed.apk
-            SFA/app/build/outputs/apk/release/*-armeabi-v7a-*-signed.apk
-
-      - name: Upload x86_64 artifact
-        uses: actions/upload-artifact@v3
-        with:
-          name: SFA-x86_64
-          path: |
-            SFA/app/build/outputs/apk/release/*-x86_64-signed.apk
-            SFA/app/build/outputs/apk/release/*-x86_64-*-signed.apk
-
-      - name: Upload x86 artifact
-        uses: actions/upload-artifact@v3
-        with:
-          name: SFA-x86
-          path: |
-            SFA/app/build/outputs/apk/release/*-x86-signed.apk
-            SFA/app/build/outputs/apk/release/*-x86-*-signed.apk
-
-      - name: Upload universal artifact
-        uses: actions/upload-artifact@v3
-        with:
-          name: SFA-universal
-          path: |
-            SFA/app/build/outputs/apk/release/*-universal-signed.apk
-            SFA/app/build/outputs/apk/release/*-universal-*-signed.apk
+      
