--- a/.github/workflows/sfa_outbound_providers.yml
+++ b/.github/workflows/sfa_outbound_providers.yml
@@ -55,34 +55,35 @@ jobs:
           chmod +x ./gradlew
           ./gradlew assembleRelease
           
-        - name: Sign SFA
-           uses: r0adkll/sign-android-release@v1
-           id: sign_app
-           with:
+      - name: Sign SFA
+        steps:
+        - uses: r0adkll/sign-android-release@v1
+        id: sign_app
+        with:
              releaseDirectory: SFA/build/outputs/apk/release
              signingKeyBase64: ${{ secrets.SIGNING_KEY }}
              alias: ${{ secrets.ALIAS }}
              keyStorePassword: ${{ secrets.KEY_STORE_PASSWORD }}
              keyPassword: ${{ secrets.KEY_PASSWORD }}
+             
+      - uses: jungwinter/split@v1
+        id: signed_files
+        with:
+            msg: ${{ steps.sign_app.signedReleaseFiles }}
+            separator: ':'
 
-        - uses: jungwinter/split@v1
-         id: signed_files
-          with:
-          msg: ${{ steps.sign_app.signedReleaseFiles }}
-          separator: ':'
-
-        - name: SFA Release
-          uses: "marvinpinto/action-automatic-releases@latest"
-          with:
+      - name: SFA Release
+        uses: "marvinpinto/action-automatic-releases@latest"
+        with:
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
           automatic_release_tag: "latest"
           prerelease: true
           title: "Release X"
           files: |
-          ${{ steps.signed_files._0 }}
-          ${{ steps.signed_files._1 }}
-          ${{ steps.signed_files._2 }}
-          ${{ steps.signed_files._3 }}
-          ${{ steps.signed_files._4 }}
+           ${{ steps.signed_files._0 }}
+           ${{ steps.signed_files._1 }}
+           ${{ steps.signed_files._2 }}
+           ${{ steps.signed_files._3 }}
+           ${{ steps.signed_files._4 }}
       
       
