--- a/.github/workflows/sfa_outbound_providers.yml
+++ b/.github/workflows/sfa_outbound_providers.yml
@@ -56,8 +56,7 @@ jobs:
           ./gradlew assembleRelease
           
       - name: Sign SFA
-        steps:
-        - uses: r0adkll/sign-android-release@v1
+        uses: r0adkll/sign-android-release@v1
         id: sign_app
         with:
              releaseDirectory: SFA/build/outputs/apk/release
@@ -66,8 +65,8 @@ jobs:
              keyStorePassword: ${{ secrets.KEY_STORE_PASSWORD }}
              keyPassword: ${{ secrets.KEY_PASSWORD }}
              
-      - uses: jungwinter/split@v1
-        id: signed_files
+      - name: split file      
+        uses: jungwinter/split@v1
         with:
             msg: ${{ steps.sign_app.signedReleaseFiles }}
             separator: ':'
