--- a/.github/workflows/sfa_outbound_providers.yml
+++ b/.github/workflows/sfa_outbound_providers.yml
@@ -65,24 +65,44 @@ jobs:
              keyStorePassword: ${{ secrets.KEY_STORE_PASSWORD }}
              keyPassword: ${{ secrets.KEY_PASSWORD }}
              
-      - name: split file      
-        uses: jungwinter/split@v1
+      - name: Upload arm64-v8a artifact
+        uses: actions/upload-artifact@v3
         with:
-            msg: ${{ steps.sign_app.signedReleaseFiles }}
-            separator: ':'
+          name: SFA-arm64-v8a
+          path: |
+            SFA/app/build/outputs/apk/release/*-arm64-v8a-signed.apk
+            SFA/app/build/outputs/apk/release/*-arm64-v8a-*-signed.apk
 
-      - name: SFA Release
-        uses: "marvinpinto/action-automatic-releases@latest"
+      - name: Upload armeabi-v7a artifact
+        uses: actions/upload-artifact@v3
         with:
-          repo_token: "${{ secrets.GITHUB_TOKEN }}"
-          automatic_release_tag: "latest"
-          prerelease: true
-          title: "Release X"
-          files: |
-           ${{ steps.signed_files._0 }}
-           ${{ steps.signed_files._1 }}
-           ${{ steps.signed_files._2 }}
-           ${{ steps.signed_files._3 }}
-           ${{ steps.signed_files._4 }}
+          name: SFA-armeabi-v7a
+          path: |
+            SFA/app/build/outputs/apk/release/*-armeabi-v7a-signed.apk
+            SFA/app/build/outputs/apk/release/*-armeabi-v7a-*-signed.apk
+
+      - name: Upload x86_64 artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: SFA-x86_64
+          path: |
+            SFA/app/build/outputs/apk/release/*-x86_64-signed.apk
+            SFA/app/build/outputs/apk/release/*-x86_64-*-signed.apk
+
+      - name: Upload x86 artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: SFA-x86
+          path: |
+            SFA/app/build/outputs/apk/release/*-x86-signed.apk
+            SFA/app/build/outputs/apk/release/*-x86-*-signed.apk
+
+      - name: Upload universal artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: SFA-universal
+          path: |
+            SFA/app/build/outputs/apk/release/*-universal-signed.apk
+            SFA/app/build/outputs/apk/release/*-universal-*-signed.apk
       
       
