--- a/.github/workflows/SFA.yml
+++ b/.github/workflows/SFA.yml
@@ -1,4 +1,4 @@
-name: Build SFA
+name: Build SFA from debiansid dev-next-yaott
 
 on:
   workflow_dispatch:
@@ -25,7 +25,7 @@ jobs:
       - name: Setup Go
         uses: actions/setup-go@v4
         with:
-          go-version: '1.21.1'
+          go-version: '1.21.2'
 
       - name: Checkout SFA Repository
         uses: actions/checkout@v4
@@ -56,8 +56,18 @@ jobs:
           chmod +x ./gradlew
           ./gradlew assembleRelease
 
+      - name: Sign SFA
+        uses: r0adkll/sign-android-release@v1
+        id: sign_app
+        with:
+             releaseDirectory: SFA/app/build/outputs/apk/release
+             signingKeyBase64: ${{ secrets.SIGNING_KEY }}
+             alias: ${{ secrets.ALIAS }}
+             keyStorePassword: ${{ secrets.KEY_STORE_PASSWORD }}
+             keyPassword: ${{ secrets.KEY_PASSWORD }}
+             
       - name: Upload artifact
         uses: actions/upload-artifact@v3
         with:
           name: SFA
-          path: SFA/app/build/outputs/apk/
+          path: SFA/app/build/outputs/apk/release/*signed.apk
