--- a/.github/workflows/SFA.yml
+++ b/.github/workflows/SFA.yml
@@ -70,4 +70,4 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: SFA
-          path: SFA/app/build/outputs/apk/release/*signed.apk
+          path: SFA/app/build/outputs/apk/release/*unsigned-signed.apk
