--- a/.github/workflows/core-e5.yml
+++ b/.github/workflows/core-e5.yml
@@ -1,4 +1,4 @@
-name: Build Core from yaott repo
+name: Build Core from E5 repo
 
 on:
   workflow_dispatch:
@@ -15,8 +15,8 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          repository: yaotthaha/sing-box-pub
-          ref: dev-yaott
+          repository: CHIZI-0618/sing-box
+          ref: dev-next-yaott
 
       - name: Get latest go version
         id: go_version
