--- a/.github/workflows/core-outbound-providers.yml
+++ b/.github/workflows/core-outbound-providers.yml
@@ -1,5 +1,4 @@
-name: Build Core based on outbound_providers
-
+name: Build Core from puernya
 on:
   workflow_dispatch:
   schedule:
@@ -26,7 +25,7 @@ jobs:
       - name: Setup Go
         uses: actions/setup-go@v4
         with:
-          go-version: '1.21.1'
+          go-version: '1.21.2'
 
       - name: Setup NDK
         uses: nttld/setup-ndk@v1
