--- a/.github/workflows/dev-next-win.yml
+++ b/.github/workflows/dev-next-win.yml
@@ -1,4 +1,4 @@
-name: build sing-box-yaott client for windows
+name: build sing-box windows from E5
 
 on:
   workflow_dispatch:
@@ -24,11 +24,11 @@ jobs:
         with:
           fetch-depth: 0
           repository: CHIZI-0618/sing-box
-          ref: dev-next-yaott
+          ref: dev-next
       - name: Setup Go
         uses: actions/setup-go@v4
         with:
-          go-version: 1.21.2
+          go-version: 1.21.3
   build_go120:
     name: Debug build (Go 1.21)
     runs-on: ubuntu-latest
@@ -38,11 +38,11 @@ jobs:
         with:
           fetch-depth: 0
           repository: CHIZI-0618/sing-box
-          ref: dev-next-yaott
+          ref: dev-next
       - name: Setup Go
         uses: actions/setup-go@v4
         with:
-          go-version: 1.21.2
+          go-version: 1.21.3
   cross:
     strategy:
       matrix:
@@ -76,11 +76,11 @@ jobs:
         with:
           fetch-depth: 0
           repository: CHIZI-0618/sing-box
-          ref: dev-next-yaott
+          ref: dev-next
       - name: Setup Go
         uses: actions/setup-go@v4
         with:
-          go-version: 1.21.2
+          go-version: 1.21.3
       - name: Build
         id: build
         run: make
