--- a/.github/workflows/core-e5.yml
+++ b/.github/workflows/core-e5.yml
@@ -16,7 +16,7 @@ jobs:
         with:
           fetch-depth: 0
           repository: CHIZI-0618/sing-box
-          ref: dev-next-yaott
+          ref: dev-next
 
       - name: Get latest go version
         id: go_version
@@ -26,7 +26,7 @@ jobs:
       - name: Setup Go
         uses: actions/setup-go@v4
         with:
-          go-version: '1.21.2'
+          go-version: '1.21.3'
 
       - name: Setup NDK
         uses: nttld/setup-ndk@v1
