--- a/.github/workflows/core-e5.yml
+++ b/.github/workflows/core-e5.yml
@@ -34,7 +34,7 @@ jobs:
         with:
           ndk-version: r26b
           add-to-path: false
-          local-cache: true
+          local-cache: false
 
       - name: Build core
         env:
