--- a/.github/workflows/SFA.yml
+++ b/.github/workflows/SFA.yml
@@ -7,14 +7,14 @@ jobs:
   build:
     runs-on: ubuntu-latest
     env:
-      TAGS: with_gvisor,with_quic,with_utls,with_clash_api,with_proxyprovider,with_ruleprovider
+      TAGS: with_gvisor,with_quic,with_utls,with_clash_api
 
     steps:
       - name: Checkout core Repository
         uses: actions/checkout@v4
         with:
-         repository: debiansid/sing-box
-         ref: dev-next-yaott
+         repository: SagerNet/sing-box
+         ref: dev-next
          fetch-depth: 0
 
       - name: Get latest go version
