--- a/.github/workflows/SFA.yml
+++ b/.github/workflows/SFA.yml
@@ -1,4 +1,4 @@
-name: Build SFA from official 
+name: Build SFA from CHIZI-0618
 
 on:
   workflow_dispatch:
@@ -7,13 +7,14 @@ jobs:
   build:
     runs-on: ubuntu-latest
     env:
-      TAGS: with_gvisor,with_quic,with_utls,with_clash_api,with_conntrack
+      TAGS: with_gvisor,with_quic,with_utls,with_clash_api,with_provider,with_conntrack
 
     steps:
       - name: Checkout core Repository
         uses: actions/checkout@v4
         with:
-         repository: SagerNet/sing-box
+         repository: CHIZI-0168/sing-box
+         ref: dev-next
          fetch-depth: 0
 
       - name: Get latest go version
