--- a/.github/workflows/sfa-rnetx.yml
+++ b/.github/workflows/sfa-rnetx.yml
@@ -74,6 +74,9 @@ jobs:
              alias: ${{ secrets.ALIAS }}
              keyStorePassword: ${{ secrets.KEY_STORE_PASSWORD }}
              keyPassword: ${{ secrets.KEY_PASSWORD }}
+        env:
+      # override default build-tools version (29.0.3) -- optional
+           BUILD_TOOLS_VERSION: "34.0.0"
 
       - name: Upload artifact
         uses: actions/upload-artifact@v3
