--- a/.github/workflows/core-rnetx.yml
+++ b/.github/workflows/core-rnetx.yml
@@ -34,7 +34,7 @@ jobs:
         uses: nttld/setup-ndk@v1
         id: setup-ndk
         with:
-          ndk-version: r26b
+          ndk-version: r26c
           add-to-path: false
           local-cache: false
 
