Update and rename dev-routestrategy-core.yml to reF1nd-core.yml

--- a/.github/workflows/reF1nd-core.yml
+++ b/.github/workflows/reF1nd-core.yml
@@ -1,4 +1,4 @@
-name: Build dev-routestrategy core from reF1nd
+name: Build dev-routestrategy core from reF1nd of PuerNya
 on:
   workflow_dispatch:
   schedule:
